test/performance/vectorization/vectorizeOnly/constChecking/serialConstChecking.good
serialConstChecking.chpl:7: error: cannot assign to const variable
serialConstChecking.chpl:8: error: cannot assign to const variable
serialConstChecking.chpl:17: error: cannot assign to const variable
serialConstChecking.chpl:22: error: cannot assign to const variable
serialConstChecking.chpl:27: error: cannot assign to const variable
serialConstChecking.chpl:33: error: cannot assign to const variable
serialConstChecking.chpl:38: error: cannot assign to const variable
serialConstChecking.chpl:43: error: cannot assign to const variable
